cli/tests/ui/storage_mount_requires_storage.stderr
Error: manifest::mount_slot_requires_storage

  × check failed
  ╰─▶ mount source `slots.api` requires a storage slot, but `api` is `http`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/storage_mount_requires_storage.json5:7:37]
 6 │     mounts: [
 7 │       { path: "/var/lib/app", from: "slots.api" },
   ·                                     ─────┬─────
   ·                                          ╰── mount source here
 8 │     ],
   ╰────
  help: URL-shaped slots expose fields like `.url`. Storage slots are virtual
        storage objects and are mounted with `from: "slots.<slot>"`.
